Successfully made the confirmation psw $ password

--- a/login-css/login.html
+++ b/login-css/login.html
@@ -27,7 +27,7 @@
                 <input id="emailInput" placeholder="Enter Your Email" type="text" required>
             </div>
             <div class="input">
-                <input id="pswInput" placeholder="Enter Your Password" type="text" required>
+                <input id="pswInput" placeholder="Enter Your Password" type="password" required>
             </div>
         </div>
         <div class="button-part">
