--- a/login-css/signup.HTML
+++ b/login-css/signup.HTML
@@ -32,10 +32,10 @@
                     <input id="userEmail" placeholder="Enter Your Email" type="text" required>
                 </div>
                 <div class="input">
-                    <input id="userPsw" placeholder="Enter Your Password" type="text" required>
+                    <input id="userPsw" placeholder="Enter Your Password" type="password" required>
                 </div>
                 <div class="input">
-                    <input id="userCpsw" placeholder="Confirm Your Password" type="text" required>
+                    <input id="userCpsw" placeholder="Confirm Your Password" type="password" required>
                 </div>
             </div>
             <div class="agree-button">
