changed successful in login page - login button

--- a/login-css/login.html
+++ b/login-css/login.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="button-part">
-            <button type="submit" id="loginBtn" class="btn-reg"> <a  href="#">Login</a> </button>
+            <button type="submit" id="loginBtn" class="btn-reg">Login</button>
         </div>
     </div>
 </body>
