re-organizing the code

--- a/Menu.html
+++ b/Menu.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="menu-css/header.css">
-    <link rel="stylesheet" href="body.css">
+    <link rel="stylesheet" href="menu-css/body.css">
     <link rel="stylesheet" href="menu-css/catalogElement.css">
     <link rel="stylesheet" href="menu-css/Thumbnail.css">
     <link rel="stylesheet" href="menu-css/delivery-service.css">
@@ -430,5 +430,5 @@
         
     </section>
 </body>
-<script src="menu.js"></script>
+<script src="menujs/menu.js"></script>
 </html>
