editing menu into index in all files

--- a/Aboutus/Aboutus.html
+++ b/Aboutus/Aboutus.html
@@ -19,7 +19,7 @@
         <div class="left-section">
             <img class="coffee-img" src="../image/coffee-logo-png-7502.png" alt="">
             <div class="logo-title">
-                <a class="title" href="../Menu.html">Coffee Shop</a>
+                <a class="title" href="../index.html">Coffee Shop</a>
             </div>     
         </div>
         <div class="middle-section">
