started making phone responsive on menu page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
                         <a href="Delivery/Delivery.html"><img class="Basket-img" src="image/shopping-cart-20392.png" alt=""></a> 
                         <p id="basket-item-count" class="basket-item-count">0</p>
                     </div>
-                    
+                </div>  
+            </div>
+            <div class="right-section2">
+                <div class="burger-menu">
+                    <img src="image/burgerMenu.png" alt="">
                 </div>
-                
             </div>    
         </div>
         <div class="Thumbnail-Profile-Description">
@@ -59,8 +62,9 @@
                     <div class="Thumbnail-order-button">
                         <button class="order-button"><p>Order Now</p> 
                             <div>
-                            <img src="image/shopping-cart-20392.png" alt="">
-                        </div> </button>                             
+                                <img src="image/shopping-cart-20392.png" alt="">
+                            </div> 
+                        </button>                             
                     </div>
                     <p class="Moremenu">More menu</p>
                 </div>
