25% done with menu page phone responsiveness

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 </div>  
             </div>
             <div class="right-section2">
+                <div id="BasketPart" class="BasketPart">
+                    <a href="Delivery/Delivery.html"><img class="Basket-img" src="image/shopping-cart-20392.png" alt=""></a> 
+                    <p id="basket-item-count" class="basket-item-count">0</p>
+                </div>
                 <div class="burger-menu">
                     <img src="image/burgerMenu.png" alt="">
                 </div>
