V2 thumbnail phone-responsiveness menu page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="right-section2">
                 <div id="BasketPart" class="BasketPart">
                     <a href="Delivery/Delivery.html"><img class="Basket-img" src="image/shopping-cart-20392.png" alt=""></a> 
-                    <p id="basket-item-count" class="basket-item-count">0</p>
+                    <p id="basket-item-count2" class="basket-item-count">0</p>
                 </div>
                 <div class="burger-menu">
                     <img src="image/burgerMenu.png" alt="">
@@ -160,6 +160,45 @@
                           </button>
                       </div>
                     </div>
+            </div>
+        </div>
+        <div class="random-numbers">
+            <div id="productDetailDiv" class="product-detail-usct">
+                <div  class="product-detail-img">
+                    <div class="product-detail-img-part">
+                        <img src="image/cappicino.jpg" alt="">
+                    </div>
+                    <div class="product-detail-pricing">
+                        <p >&#163;10</p>
+                    </div> 
+                        <div class="product-detail-stars">
+                            <p>
+                                4.5
+                            </p>
+                            <img src="image/Gold_Star.svg" alt="" class="product-detail-star-img">
+                        </div>
+                </div>
+                <div class="product-detail-title-views">
+                    <div class="product-detail-title">
+                        <p>HOT MILK</p> 
+                    </div>
+                    <div class="product-detail-views">
+                       <p> 25K </p> 
+                    </div>
+                </div>
+                <div class="product-detail-description-basketImg">
+                    <div class="product-detail-description">
+                        <p>
+                            bread with meat and <br> vegetables
+                        </p> 
+                    </div>
+                    <div class="product-detail-basketImg">
+                        <button> <img src="image/shopping-cart2.png" alt="" class="basketImg"> </button>
+                    </div>
+                </div>
+                <div class="product-detail-viewbtn">
+                    <button class="viewProductBtn">View product</button>
+                </div>
             </div>
         </div>
     </div>
