V4 thumbnail modification in thumbnailCss and JV

--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                     </div>
             </div>
         </div>
-        <div class="random-numbers">
-            <div id="productDetailDiv" class="product-detail-usct">
+        <div id="productDetailDivs" class="random-numbers">
+            <div  class="product-detail-usct">
                 <div  class="product-detail-img">
                     <div class="product-detail-img-part">
                         <img src="image/cappicino.jpg" alt="">
                     </div>
                     <div class="product-detail-pricing">
-                        <p >&#163;10</p>
+                        <p >&#163;9.55</p>
                     </div> 
                         <div class="product-detail-stars">
                             <p>
