V6 menu page responsive phone

--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
                 <div class="About-us-description-p3"><p> We are a company that makes and distributes <br> delicious drinks. our main product 
                 is made with a <br> secret recipe and available in stores worldwide.</p></div>
                 <div class="About-us-description-button">
-                    <button>Get your coffee</button>
+                    <button onclick="
+                    window.location.href='Aboutus/Aboutus.html';
+                    " > See More </button>
                 </div>
             </div>
         </div>
