--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </div> 
                         </button>                             
                     </div>
-                    <p class="Moremenu">More menu</p>
+                    <p onclick="window.location.href='OurProduct/product.html';" class="Moremenu">More menu</p>
                 </div>
             </div>
             <div class="Thumbnail-profile-part">  
@@ -383,12 +383,12 @@
     </section>
     <section class="testimonial">
         <div class="testimonial-grid">
-            <div class="testimonial-description-part" >
+            <div class="testimonial-description-part">
                 <p class="testimonial-p1">What they say about us</p>
                 <p class="testimonial-p2">We always provide the best service <br> and always provide the quality of <br> coffee</p>
             </div>
             <div class="testimonial-photoCard-part">
-                <div class="testimonial-card">
+                <div class="testimonial-card testimonisl-1">
                     <img src="image/perso1.jpg" alt="">
                     <div class="testimonial-card-comments glass-effect">
                         <div>
@@ -401,7 +401,7 @@
 
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card testimonisl-2">
                     <img src="image/perso1.jpg" alt="">
                     <div class="testimonial-card-comments glass-effect">
                         <div>
@@ -414,7 +414,7 @@
 
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card testimonisl-3">
                     <img src="image/perso1.jpg" alt="">
                     <div class="testimonial-card-comments glass-effect">
                         <div>
