--- a/OurProduct/product.html
+++ b/OurProduct/product.html
@@ -7,6 +7,7 @@
     <title>Our Product</title>
     <link rel="stylesheet" href="css/products.css">
     <link rel="stylesheet" href="../menu-css/header.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -40,6 +41,15 @@
                 
             </div>
             
+        </div>
+        <div class="right-section2">
+            <div id="BasketPart" class="BasketPart">
+                <a href="Delivery/Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
+                <p id="basket-item-count2" class="basket-item-count">0</p>
+            </div>
+            <div class="burger-menu">
+                <img src="../image/burgerMenu.png" alt="">
+            </div>
         </div>    
     </div>
         <section class="menu-section">
