--- a/OurProduct/productDetails.html
+++ b/OurProduct/productDetails.html
@@ -41,6 +41,15 @@
                 
             </div>
             
+        </div>
+        <div class="right-section2">
+            <div id="BasketPart" class="BasketPart">
+                <a href="Delivery/Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
+                <p id="basket-item-count2" class="basket-item-count">0</p>
+            </div>
+            <div class="burger-menu">
+                <img src="../image/burgerMenu.png" alt="">
+            </div>
         </div>    
     </div>
     <div id="productDetail-flex" class="productDetail-flex">
