--- a/OurProduct/productDetails.html
+++ b/OurProduct/productDetails.html
@@ -44,12 +44,17 @@
         </div>
         <div class="right-section2">
             <div id="BasketPart" class="BasketPart">
-                <a href="Delivery/Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
+                <a href="../Delivery/Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
                 <p id="basket-item-count2" class="basket-item-count">0</p>
             </div>
             <div class="burger-menu">
-                <img src="../image/burgerMenu.png" alt="">
+                <img onClick="changeIcon();" id="burger-img-source" src="../image/burgerMenu.png" alt="">
             </div>
+        </div>
+        <div id="header-navigation-section" class="header-navigation-section">
+                <a href="../Aboutus/Aboutus.html">About us</a>
+                <a href="product.html">Our Product</a>
+                <a href="../Delivery/Delivery.html">Delivery</a>
         </div>    
     </div>
     <div id="productDetail-flex" class="productDetail-flex">
