--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="left-section">
                 <img class="coffee-img" src="image/coffee-logo-png-7502.png" alt="">
                 <div class="logo-title">
-                    <a class="title" href="index.html">Coffee Shop</a>
+                    <a class="title" href="index.html">Flush Tea</a>
                 </div>     
             </div>
             <div class="middle-section">
@@ -52,9 +52,14 @@
                     <p id="basket-item-count2" class="basket-item-count">0</p>
                 </div>
                 <div class="burger-menu">
-                    <img src="image/burgerMenu.png" alt="">
+                    <img onClick="changeIcon();" id="burger-img-source" src="image/burgerMenu.png" alt="">
                 </div>
-            </div>    
+            </div>
+            <div id="header-navigation-section" class="header-navigation-section">
+                <a href="Aboutus/Aboutus.html">About us</a>
+                <a href="OurProduct/product.html">Our Product</a>
+                <a href="Delivery/Delivery.html">Delivery</a>
+            </div>   
         </div>
         <div class="Thumbnail-Profile-Description">
             <div class="Thumbnail-Description-part">
