--- a/Aboutus/Aboutus.html
+++ b/Aboutus/Aboutus.html
@@ -41,7 +41,20 @@
                 </div>
                 
             </div>
-            
+        </div> 
+        <div class="right-section2">
+            <div id="BasketPart" class="BasketPart">
+                <a href="../Delivery/Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
+                <p style="color:black;" id="basket-item-count2" class="basket-item-count">0</p>
+            </div>
+            <div class="burger-menu">
+                <img onClick="changeIcon();" id="burger-img-source" src="../image/burgerMenu.png" alt="">
+            </div>
+        </div>
+        <div id="header-navigation-section" class="header-navigation-section">
+                <a href="Aboutus.html">About us</a>
+                <a href="../OurProduct/product.html">Our Product</a>
+                <a href="../Delivery/Delivery.html">Delivery</a>
         </div>    
     </div>
     <section class="body-element">
