--- a/Delivery/Delivery.html
+++ b/Delivery/Delivery.html
@@ -41,7 +41,21 @@
                 
             </div>
             
-        </div>    
+        </div>
+        <div class="right-section2">
+            <div id="BasketPart" class="BasketPart">
+                <a href="Delivery.html"><img class="Basket-img" src="../image/shopping-cart-20392.png" alt=""></a> 
+                <p id="basket-item-count2" class="basket-item-count">0</p>
+            </div>
+            <div class="burger-menu">
+                <img onClick="changeIcon();" id="burger-img-source" src="../image/burgerMenu.png" alt="">
+            </div>
+        </div>
+        <div id="header-navigation-section" class="header-navigation-section">
+                <a href="../Aboutus/Aboutus.html">About us</a>
+                <a href="../OurProduct/product.html">Our Product</a>
+                <a href="Delivery.html">Delivery</a>
+        </div>     
     </div> 
     <div class="payementInfo">
         <p class="shopping-cart">Shopping Cart</p>
