--- a/Delivery/Delivery.html
+++ b/Delivery/Delivery.html
@@ -18,7 +18,7 @@
         <div class="left-section">
             <img class="coffee-img" src="../image/coffee-logo-png-7502.png" alt="">
             <div class="logo-title">
-                <a class="title" href="../index.html">Coffee Shop</a>
+                <a class="title" href="../index.html">Flush Tea</a>
             </div>     
         </div>
         <div class="middle-section">
